reflection plane bug in rendered view. EEVEE #60667

Closed
opened 2019-01-20 11:24:59 +01:00 by Andrei Salamandic · 7 comments

System Information
Operating system: win764
Graphics card: gtx1080ti

Blender 2.8
Broken:
b0dee09a6d, blender2.8, 2019-01-20
Worked: e57ee5934a

Short description of error

had a kitchen scene with some mirrors(added reflection planes). after updating to the latest build the planes started to be rendered with bugs. (blacks or even missing reflected objects)

Exact steps for others to reproduce the error
well.... just add some objects and a refl. plane wich must reflect something (these objects). make calculation of reflection. that's all i guess. in my scene i have turned on screen space refl, also have irradiance volume, AO.. atttaching a short video of this bug.

with bug:

https://youtu.be/6YU7Gh2PBrg

without bug with an older version:

https://youtu.be/6oEN1xPAstI

**System Information** Operating system: win764 Graphics card: gtx1080ti **Blender 2.8** Broken: b0dee09a6d55, blender2.8, 2019-01-20 Worked: e57ee5934a30 **Short description of error** had a kitchen scene with some mirrors(added reflection planes). after updating to the latest build the planes started to be rendered with bugs. (blacks or even missing reflected objects) **Exact steps for others to reproduce the error** well.... just add some objects and a refl. plane wich must reflect something (these objects). make calculation of reflection. that's all i guess. in my scene i have turned on screen space refl, also have irradiance volume, AO.. atttaching a short video of this bug. with bug: https://youtu.be/6YU7Gh2PBrg without bug with an older version: https://youtu.be/6oEN1xPAstI

Added subscriber: @andreymd87

Added subscriber: @andreymd87
Andrei Salamandic changed title from reflection cube bug in rendered view. to reflection cube bug in rendered view. EEVEE 2019-01-20 11:25:31 +01:00
Andrei Salamandic changed title from reflection cube bug in rendered view. EEVEE to reflection plane bug in rendered view. EEVEE 2019-01-20 11:28:09 +01:00

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Can you supply a simple blend file that demonstrates the issue? Thanks.

Can you supply a simple blend file that demonstrates the issue? Thanks.

test.blend here is. the suzane must be visible in the reflection plane. and she is, in an older build of blender.

[test.blend](https://archive.blender.org/developer/F6349211/test.blend) here is. the suzane must be visible in the reflection plane. and she is, in an older build of blender.
Clément Foucault was assigned by William Reynish 2019-01-20 21:45:48 +01:00

This issue was referenced by 14b5668c60

This issue was referenced by 14b5668c6017965df85b633a0f1cae1646a6bb37

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

works fine now. you are awesome !!

works fine now. you are awesome !!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60667
No description provided.