DRW: Fix corner indices order in clipping plane setup

Fix T60667: Eevee: reflection plane bug in rendered view.